<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    
     <TableLayout
         	android:id="@+id/t1"
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:layout_alignParentTop="true"
			>
			 <TableRow>

			 <TextView
			    android:id="@+id/date"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_gravity="center_vertical"
			    android:layout_weight="3"
			    android:gravity="center"
			    android:textAppearance="?android:attr/textAppearanceSmall"
			    android:textStyle="bold"
			    android:text="" />

			<Button
			    android:id="@+id/pre_btn"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/pre_date"
			    android:layout_marginTop="2dp"
			    android:layout_weight="1"
			    style="@style/btnStyleBeige"
			    android:onClick="onPreDate" />

			<Button
			    android:id="@+id/today_btn"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_weight="1"
			    android:layout_marginLeft="2dp"
			    android:layout_marginTop="2dp"
			    android:onClick="onToday"
			    style="@style/btnStyleBeige"
			    android:text="@string/today" />

			<Button
			    android:id="@+id/next_btn"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_weight="1"
			    android:layout_marginLeft="2dp"
			    android:layout_marginTop="2dp"
			    android:onClick="onNextDate"
			    style="@style/btnStyleBeige"
			    android:text="@string/next_date" />

			 </TableRow>
			     
	</TableLayout>
	<TableLayout
	    	android:id="@+id/t2"
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:layout_below="@id/t1"
			>
			 <TableRow>
			  <TextView
			    android:id="@+id/p_c"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_gravity="center_vertical"
			    android:gravity="center"
			    android:textSize="15sp"
			    android:layout_weight="3" />
			  <ImageView 
			      android:id="@+id/p_c_img"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_weight="1"
			    android:layout_gravity="center"
			    android:src="@drawable/arrow_up"/>
	    	 <Spinner
	    	    android:id="@+id/spinnner"
	    	    android:layout_width="wrap_content"
	    	    android:layout_height="wrap_content"
	    	    android:layout_weight="3"/>
			 </TableRow>
	</TableLayout>
	<ScrollView
        android:id="@+id/t4"
		android:layout_below="@+id/t2"
		android:layout_above="@+id/adb_btn"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content">
		<RelativeLayout
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical">
		     <TableLayout 
					android:id="@+id/table_title"
			    	android:layout_width="fill_parent"
			    	android:layout_height="wrap_content"
			    	android:stretchColumns="*"
					>
				 <TableRow
				     android:background="#ffFFF9B8">
		                <TextView android:gravity="right" android:textAppearance="?android:attr/textAppearanceMedium" android:text="@string/p1_c_0"/>
		                <TextView android:gravity="right" android:textAppearance="?android:attr/textAppearanceMedium" android:text="@string/p1_c_1"/>
		                <TextView android:gravity="center" android:textAppearance="?android:attr/textAppearanceMedium" android:text="@string/p1_c_2"/>
						<TextView android:gravity="left" android:textAppearance="?android:attr/textAppearanceMedium" android:text="@string/p1_c_3"/>
						<TextView android:gravity="left" android:textAppearance="?android:attr/textAppearanceMedium" android:text="@string/p1_c_4"/>
		         </TableRow>
			</TableLayout>
		    <TableLayout 
		    	android:layout_width="fill_parent"
		    	android:layout_height="wrap_content"
		    	android:layout_below="@+id/table_title"
		    	android:id="@+id/table"
		    	android:stretchColumns="*"
				/>
		    <TableLayout
		        android:layout_marginTop="20dp"
		        android:id="@+id/table_txo_buy"
		    	android:layout_width="fill_parent"
		    	android:layout_height="wrap_content"
		    	android:layout_below="@+id/table"
		    	android:stretchColumns="*"
				>
				<TableRow
				     android:background="#ffFEAEC9">
		                <TextView android:gravity="center" android:textAppearance="?android:attr/textAppearanceMedium" android:text="買權分計未平倉餘額" android:layout_span="4"/>
		         </TableRow>
		         <TableRow
				     android:background="#ffFEAEC9">

						<TextView android:gravity="left" android:textAppearance="?android:attr/textAppearanceMedium" android:text="身分別"/>
						<TextView android:gravity="left" android:textAppearance="?android:attr/textAppearanceMedium" android:text="買方口數"/>
						<TextView android:gravity="left" android:textAppearance="?android:attr/textAppearanceMedium" android:text="賣方口數"/>
						<TextView android:gravity="left" android:textAppearance="?android:attr/textAppearanceMedium" android:text="買賣差額"/>
		         </TableRow>
			</TableLayout>
		    <TableLayout
		        android:layout_marginTop="20dp"
		        android:id="@+id/table_txo_sell"
		    	android:layout_width="fill_parent"
		    	android:layout_height="wrap_content"
		    	android:layout_below="@+id/table_txo_buy"
		    	android:stretchColumns="*"
				>
				<TableRow
				     android:background="#ffB5E51D" >
		                <TextView android:gravity="center" android:textAppearance="?android:attr/textAppearanceMedium" android:text="賣權分計未平倉餘額" android:layout_span="4"/>
		         </TableRow>
		          <TableRow
				     android:background="#ffB5E51D">
						<TextView android:gravity="left" android:textAppearance="?android:attr/textAppearanceMedium" android:text="身分別"/>
						<TextView android:gravity="left" android:textAppearance="?android:attr/textAppearanceMedium" android:text="買方口數"/>
						<TextView android:gravity="left" android:textAppearance="?android:attr/textAppearanceMedium" android:text="賣方口數"/>
						<TextView android:gravity="left" android:textAppearance="?android:attr/textAppearanceMedium" android:text="買賣差額"/>
		         </TableRow>
			</TableLayout>
			<TableLayout
		        android:layout_marginTop="20dp"
		        android:paddingBottom="20dp"
		        android:id="@+id/table_txo_buysell"
		    	android:layout_width="fill_parent"
		    	android:layout_height="wrap_content"
		    	android:layout_below="@+id/table_txo_sell"
		    	android:stretchColumns="*"
				>
				<TableRow
				     android:background="#ffFFF9B8" >
		                <TextView android:gravity="center" android:textAppearance="?android:attr/textAppearanceMedium" android:text="買賣權未平倉餘額" android:layout_span="4"/>
		         </TableRow>
		          <TableRow
				     android:background="#ffFFF9B8">
						<TextView android:gravity="left" android:textAppearance="?android:attr/textAppearanceMedium" android:text="身分別"/>
						<TextView android:gravity="left" android:textAppearance="?android:attr/textAppearanceMedium" android:text="多方口數"/>
						<TextView android:gravity="left" android:textAppearance="?android:attr/textAppearanceMedium" android:text="空方口數"/>
						<TextView android:gravity="left" android:textAppearance="?android:attr/textAppearanceMedium" android:text="多空淨額"/>
		         </TableRow>
			</TableLayout>
	    </RelativeLayout>
 	</ScrollView>
 	
	<TextView
		    android:id="@+id/status"
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:layout_below="@id/t2"
		    android:layout_above="@+id/adb_btn"
		    android:layout_gravity="center"
		    android:gravity="center"
		    android:textAppearance="?android:attr/textAppearanceMedium"
		    android:visibility="gone" />
	 <Button
	    android:id="@+id/adb_btn"
		android:layout_alignParentBottom="true"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:drawableLeft="@drawable/mute"
		android:drawablePadding="10dip"
		android:text="期貨選擇權\n                     誠徵客人"
		android:textSize="30sp"
		android:textColor="#ffffffff"
		android:background="@drawable/button_orange"
		android:gravity="center_vertical|left"
		android:onClick="onClickBlog"
		android:clickable="true"
		android:padding="5dp"
		android:visibility="gone"
		/>
</RelativeLayout>
